2010-06-25  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Support tree-conflict showing.

2010-06-19  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Release: 0.9.3

2010-06-14  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: Support repository file `blame'

	* Fix: fsvn-log-list-open-revision not works for file.

2010-06-12  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: Fix, A lot of modified files make slow.

	* fsvn-logview.el (fsvn-log-sibling-mode-map):
			fsvn-log-sibling-log-this C-c l -> z l
			(fsvn-log-message-mode-map):
			fsvn-log-message-browse-this C-c j -> C-c C-m
				and bugfix

	* fsvn-parasite.el (fsvn-parasite-commit-mode-map):
			fsvn-parasite-commit-toggle-no-unlock C-c N -> C-c M-n
			fsvn-parasite-commit-toggle-keep-changelist C-c K -> C-c M-k

	* fsvn-logview.el (fsvn-log-list-mode-map): fsvn-log-list-open-revision Bounded C-c o -> C-c C-m

	* fsvn-win.el : tortoise keymap C-c s -> C-c C-t

	* fsvn-svk.el : svk keymap C-c v -> C-c C-k

	* fsvn-proclist.el: add new major-mode

2010-06-10  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* fsvn-browse.el (fsvn-browse-prefix-map): fsvn-browse-update-path bound to C-c C-u
	(fsvn-browse-mode-map): Make prefix map to `z'. Fix violating keymap conventions.

2010-06-07  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* MAKE-TARGETS.mk (archive): Compress single-file

2010-06-01  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: fsvn-log-list-mode about multibyte char.
	* Change: Revision max length to 7

2010-05-30  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: run-hooks -> run-mode-hooks

2010-05-29  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: fsvn-after-save-hook when svn:eol-style property is native
	* Change: internal command variable (fsvn-svn*-command-internal) make have absolute path.
	* Improvement: fix async process function
	* Improvement: MAKE-TARGETS -> MAKE-TARGETS.mk