@@ -69,8 +69,9 @@ Keybindings:
   (use-local-map fsvn-message-edit-mode-map)
   (setq major-mode 'fsvn-message-edit-mode)
   (setq mode-name "Fsvn Log Edit")
-  (fsvn-make-buffer-variables fsvn-message-edit-buffer-local-variables)
+  (setq buffer-undo-list nil)
   (setq buffer-read-only nil)
+  (fsvn-make-buffer-variables fsvn-message-edit-buffer-local-variables)
   (erase-buffer))
 
 (defun fsvn-message-edit-prepared-buffer ()
